--- a/uvod.html
+++ b/uvod.html
@@ -39,6 +39,6 @@ implementacija unutar “block device” enkripcije u Red Hat
 Enterprise Linux.</P>
 </BODY>
 <hr style="color:#ffb380">
-<center><p><a href="uvod.html">Prethodna</a> | <a href="LUKS_disk_enkripcija.html">Sljedeća</a></center> 
+<center><p><a href="index.html">Prethodna</a> | <a href="LUKS_disk_enkripcija.html">Sljedeća</a></center> 
 <hr style="color:#ffb380">
 </HTML>
