--- a/LUKS_disk_enkripcija.html
+++ b/LUKS_disk_enkripcija.html
@@ -97,6 +97,6 @@ nemogućnosti:</B></P>
 </P>
 </BODY>
 <hr style="color:#ffb380">
-<center><p><a href="uvod.html">Prethodna</a> | <a href=".html">Sljedeća</a></center> 
+<center><p><a href="uvod.html">Prethodna</a> | <a href="install_luks_pack.html">Sljedeća</a></center> 
 <hr style="color:#ffb380">
 </HTML>
