--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
 	<p><a href="LUKS_disk_enkripcija.html"> 1.1 LUKS disk enkripcija</a>       
 	</p>
 	<br>
+    <p><a href=".html"> 2. Instalacija LUKS Paketa </a>       
+	</p>
+	<p><a href=".html"> 3. Kreiranje LUKS Particije</a>       
+	</p>
+	<p><a href=".html"> 3.1. Kreiranje LUKS Particije - Primjer 1</a>       
+	</p>
+	<p><a href=".html"> 3.1. Kreiraje LUKS Ključa </a>       
+	</p>
 	
-	2.
+
 	<br>
 	3.
 	<br>
