--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
 	<br>
     <p><a href=".html"> 2. Instalacija LUKS Paketa </a>       
 	</p>
-	<p><a href=".html"> 3. Kreiranje LUKS Particije</a>       
+	<p><a href="krei_luks_part.html"> 3. Kreiranje LUKS Particije</a>       
 	</p>
-	<p><a href=".html"> 3.1. Kreiranje LUKS Particije - Primjer 1</a>       
+	<p><a href="krei_luks_par_1.html"> 3.1. Kreiranje LUKS Particije - Primjer 1</a>       
 	</p>
-	<p><a href=".html"> 3.1. Kreiraje LUKS Ključa </a>       
+	<p><a href="krei_luks_klj_1.html"> 3.1.1 Kreiraje LUKS Ključa </a>       
+	</p>
+	<br>
+	<p><a href="krei_nov_klj.html">3.1.2. Kreiranje Novog Ključa</a>       
+	</p>
+	<p><a href="bri_luks_par.html">3.2. Brisanje Ključa</a>       
 	</p>
 	
 
-	<br>
-	3.
-	<br>
 	
 
 </body>
