--- a/krei_luks_klj_1.html
+++ b/krei_luks_klj_1.html
@@ -301,6 +301,6 @@ podigne naša LUKS particija će biti učitana u direktorij:
 </P>
 </BODY>
 <hr style="color:#ffb380">
-<center><p><a href="krei_luks_par_1.html">Prethodna</a> | <a href=".html">Sljedeća</a></center> 
+<center><p><a href="krei_luks_par_1.html">Prethodna</a> | <a href="krei_nov_klj.html">Sljedeća</a></center> 
 <hr style="color:#ffb380">
 </HTML>
