--- a/bri_luks_par.html
+++ b/bri_luks_par.html
@@ -265,6 +265,6 @@ ili cijeli direktorij</P>
 </P>
 </BODY>
 <hr style="color:#ffb380">
-<center><p><a href="krei_nov_klj.html">Prethodna</a> | <a href=".html">Sljedeća</a></center> 
+<center><p><a href="krei_nov_klj.html">Prethodna</a> | <a href="kre_luks_pr_2.html">Sljedeća</a></center> 
 <hr style="color:#ffb380">
 </HTML>
