--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<p><a href="LUKS_disk_enkripcija.html"> 1.1 LUKS disk enkripcija</a>       
 	</p>
 	<br>
-    <p><a href=".html"> 2. Instalacija LUKS Paketa </a>       
+    <p><a href="install_luks_pack.html"> 2. Instalacija LUKS Paketa </a>       
 	</p>
 	<p><a href="krei_luks_part.html"> 3. Kreiranje LUKS Particije</a>       
 	</p>
@@ -40,7 +40,9 @@
 	</p>
 	<p><a href="bri_luks_par.html">3.2. Brisanje Ključa</a>       
 	</p>
-	
+	<p><a href="kre_luks_pr_2.html">3.3. Kreiranje LUKS Particije - Primjer 2</a> 
+	</p>
+	<p><a href="kre_luks_pr_3.html">3.4. Kreiranje LUKS Particije - Primjer 3</a> 
 
 	
 
