--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 	<br>
     <p><a href="install_luks_pack.html"> 2. Instalacija LUKS Paketa </a>       
 	</p>
+	<br>
 	<p><a href="krei_luks_part.html"> 3. Kreiranje LUKS Particije</a>       
 	</p>
 	<p><a href="krei_luks_par_1.html"> 3.1. Kreiranje LUKS Particije - Primjer 1</a>       
 	</p>
 	<p><a href="krei_luks_klj_1.html"> 3.1.1 Kreiraje LUKS Ključa </a>       
 	</p>
-	<br>
 	<p><a href="krei_nov_klj.html">3.1.2. Kreiranje Novog Ključa</a>       
 	</p>
 	<p><a href="bri_luks_par.html">3.2. Brisanje Ključa</a>       
@@ -43,9 +43,13 @@
 	<p><a href="kre_luks_pr_2.html">3.3. Kreiranje LUKS Particije - Primjer 2</a> 
 	</p>
 	<p><a href="kre_luks_pr_3.html">3.4. Kreiranje LUKS Particije - Primjer 3</a> 
-
-	
-
+    </p>
+    <br>
+	<p><a href="4_nbde_1.html">4. Konfiguracija enkriptirane pohrane koristeći NBDE</a> 
+    <p><a href="4_nbde_2.html">4.1. Svojstva radnih stanica</a> 
+	<p><a href="4_nbde_3.html">4.2. Kreiranje LUKS Particije</a> 
+    <p><a href="4_nbde_4.html">4.3. TANG Server - Instalacija potrebnih paketa</a> 
+    <p><a href="4_nbde_5.html">4.4. CLAVIS - Clinet Side</a> 
 </body>
 <hr style="color:#ffb380">
 <center><p><a href="uvod.html">Sljedeća</a></center> 
