--- a/4_nbde_5.html
+++ b/4_nbde_5.html
@@ -516,6 +516,6 @@ automatski povlači ključ I otključava enkriptiranu particiju.</P>
 </P>
 </BODY>
 <hr style="color:#ffb380">
-<center><p><a href="4_nbde_4.html">Prethodna</a> | <a href=".html">Sljedeća</a></center> 
+<center><p><a href="4_nbde_4.html">Prethodna</a> | <a href="5.html">Sljedeća</a></center> 
 <hr style="color:#ffb380">
 </HTML>
