--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 	<p><a href="4_nbde_3.html">4.2. Kreiranje LUKS Particije</a> 
     <p><a href="4_nbde_4.html">4.3. TANG Server - Instalacija potrebnih paketa</a> 
     <p><a href="4_nbde_5.html">4.4. CLAVIS - Clinet Side</a> 
+    
+    <br>
+    <br>
+    <p><a href="5.html">5. iSCSI sa LUKS Enkripcijom</a> 
+    <p><a href="5_1.html">5.1. Target Server</a> 
+    <p><a href="5_2.html">5.2. Initiator Client</a> 
+    <p><a href="5_2_1.html">5.2.1. Kreiranje LUKS Particije</a> 
+    <p><a href="5_2_2.html">5.2.2. iSCSI sa LUKS Enkripcijom i NBDE</a> 
 </body>
 <hr style="color:#ffb380">
 <center><p><a href="uvod.html">Sljedeća</a></center> 
